Remove output from loading cells

--- a/GeneralisedFilters/examples/trend-inflation/trend-inflation.ipynb
+++ b/GeneralisedFilters/examples/trend-inflation/trend-inflation.ipynb
@@ -15,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "using Pkg\n",
@@ -41,7 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "using GeneralisedFilters\n",
